Add basic search and faceting functionality
* Add implementation for basic search
* Update field for SearchQuery in models
* Fix ordering facets and hits in response
* Fix handling of config in api routes and DAO
