# metadata_search_service/api/main.py
@@ -19,12 +19,49 @@ Additional endpoints might be structured in dedicated modules
 (each of them having a sub-router).
 """
 
-from fastapi import FastAPI
+from fastapi import Depends, FastAPI, HTTPException
+
+from metadata_search_service.config import Config, get_config
+from metadata_search_service.dao.document import get_documents
+from metadata_search_service.models import DocumentType, SearchQuery, SearchResult
+
+# pylint: disable=too-many-arguments
 
 app = FastAPI()
 
 
-@app.get("/", summary="Greet the world")
+@app.get("/", summary="Index for Metadata Search Service")
 async def index():
-    """Greet the World"""
-    return "Hello World."
+    """Index for Metadata Search Service."""
+    return "Index for Metadata Search Service."
+
+
+@app.post(
+    "/rpc/search",
+    summary="Search metadata by keywords and facets",
+    response_model=SearchResult,
+)
+async def search(
+    query: SearchQuery,
+    document_type: DocumentType,
+    return_facets: bool = False,
+    skip: int = 0,
+    limit: int = 10,
+    config: Config = Depends(get_config),
+):
+    """Search metadata based on a given query string."""
+    if query.query != "*":
+        raise HTTPException(
+            status_code=400,
+            detail="Unexpected search query pattern."
+            + " Only generic queries (`*`) are supported.",
+        )
+    hits, facets = await get_documents(
+        document_type=document_type,
+        return_facets=return_facets,
+        skip=skip,
+        limit=limit,
+        config=config,
+    )
+    response = {"facets": facets, "hits": hits}
+    return response
